# dj-all-auth

./: .gitignore  AUTHORS.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requiremnt.txt  setup.cfg
dj_all_auth/: __init__.py  admin.py  base_models.py  context_processors.py  urls.py
dj_all_auth/lib/: Mail.py
dj_all_auth/locale/en/LC_MESSAGES/: django.mo  django.po
dj_all_auth/models/: __init__.py
dj_all_auth/services/: __init__.py
dj_all_auth/services/auth/: views.py
dj_all_auth/services/connections/: views.py
dj_all_auth/services/connections/discord/: Discord.py  models.py  urls.py  views.py
dj_all_auth/services/connections/google/: Google.py  models.py  urls.py  views.py
dj_all_auth/services/connections/steam/: Steam.py
dj_all_auth/services/connections/twitch/: Twitch.py  models.py  urls.py  views.py
dj_all_auth/services/profile/: models.py  urls.py  views.py
dj_all_auth/services/security/: __init__.py
dj_all_auth/static/justify/: justify.js
dj_all_auth/templates/dj_all_auth/auth/: base.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  request_account_activation.html
dj_all_auth/templates/dj_all_auth/connections/: index.html
dj_all_auth/templates/dj_all_auth/layouts/: base.html  css_section.html  head_section.html  js_section.html  navbar.html  page-loader.html
dj_all_auth/templates/dj_all_auth/profile/: index.html
dj_all_auth/utils/: TokenGenerator.py  forms.py
dj_all_auth_backup/: __init__.py  apps.py  urls.py  views.py
dj_all_auth_backup/models/: __init__.py
dj_all_auth_backup/services/auth/: views.py
dj_all_auth_backup/services/connections/discord/: views.py
dj_all_auth_backup/services/profile/: __init__.py  views.py
dj_all_auth_backup/services/security/: views.py
dj_all_auth_backup/templates/dj_all_auth/: index.html
dj_all_auth_backup/utils/: forms.py
dj_all_auth_old/: __init__.py  admin.py  context_processors.py  urls.py
dj_all_auth_old/services/auth/: __init__.py  views.py
dj_all_auth_old/services/connections/: __init__.py
dj_all_auth_old/services/profile/: __init__.py
dj_all_auth_old/templates/dj_all_auth/: index.html
dj_all_auth_old/utils/: forms.py
django_all_auth/: __init__.py  apps.py  urls.py
django_all_auth/services/security/: urls.py
django_all_auth/templates/django_all_auth/: index.html
(+36 files in other folders)
