[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-all-auth"
version = "0.1-beta19"
authors = [
    { name = "Deviser", email = "deviserops+pypi@gmail.com" },
]
description = "Django all auth includes all account, including django default, OAuth (Google, Discord, Twitch), openId (Steam)."
readme = "README.rst"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "Django>3",
]

[project.urls]
Homepage = "https://github.com/deviserops/dj-all-auth"
Issues = "https://github.com/deviserops/dj-all-auth/issues"