[metadata]
name = dj-all-auth
version = 0.1-beta9
description = Django all auth includes all account, including django default, OAuth (Google, Discord, Twitch), openId (Steam).
long_description = file: README.rst
url = https://github.com/deviserops/dj-all-auth
author = Deviser
author_email = deviserops+pypi@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0.4  # Replace "X.Y" as appropriate